<?xml version="1.0"?>
<package>
  <name>empty_package</name>
  <version>0.0.0</version>
  <description>The empty_package package</description>

  <author email="eanelson@eecs.berkeley.edu">Erik Nelson</author>
  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>
  <license>none</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
</package>
